04/04
	* Reverted some changes for elemental converters [Playtester]
	- it doesn't seem to work, needs testing on trunk
	* Merged mob_db and mob_skill_db [Playtester]
	- updated modes of 11.1 mobs
	- raised frequency of skill usage of 11.1 MVPs
	- updated sql files
	- please test if the MVP's skill usage is more active now
04/03
	* Large db merge [Playtester]
	- updated items, item givers and more
03/27
	* Merged Concentration's unhide range being 7x7
	* Merged the default stun time being 5 secs for skills.
03/15
	* Increased Shield Chain's range by one. It is now a ranged skill.
	  [Skotlex]
03/14
	* Updated various weapons and "AddEffWhenHit" cards [Playtester]
	- also updates sql files
03/13
	* Corrected the new packet version entries for skilluseposinfo
03/07
	* Corrected nk of a bunch of skills: 0x8 -> 0x80: Self Destructio, Bio
	  Explosion, Pressure. Removed 0x8: Smoking, Fling, Zeny Nage. Added 0x80:
	  Soul Burn, Gravitation. [Skotlex]
03/06
	* Big item_db update [Playtester]
	- various items got their official aegis name and price
	- added special type items
	- added new headgears thanks to Argatlahm
	- fixed various weapons
	- other random item fixes
	- updated item_db.sql
	* Soul Breaker no longer ignores elemental adjustments. [Skotlex]
	* Added the 2 new packet versions to packet_db.txt [Zephiris]
03/05
	* Merged Box of Thunder giving "increase agility" speed up (+25%) rather
	  than NPC Agi Up (+50%), corrected it's duration to 30 secs as well.
	* Updated item_db.sql
03/02
	* Merged the new NK values to skill_db. See file for details on these new
	  NK values which determine damage properties of skills. [Skotlex]
02/23
	* Fixed Aegis names and added some etc items [Playtester]
02/13
	* Fixed Bacsojin's mob id in mob_boss [Playtester]
02/12
	* Reverted Venom Splasher's element to take your weapon's
	* Merged skill_db, some max levels for npc skills and elements for some
	  sage skills.